name:                summer-of-rogue
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/anthonyfinch/summer-of-rogue#readme
license:             BSD3
license-file:        LICENSE
author:              Anthony Finch
maintainer:          actionspeakslouder@gmail.com
copyright:           2017 Anthony Finch
category:            Games
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sor
  build-depends:       base >= 4.7 && < 5
                     , gloss
  default-language:    Haskell2010

executable sor
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , summer-of-rogue
  default-language:    Haskell2010

test-suite sor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , summer-of-rogue
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/anthonyfinch/summer-of-rogue
